# changelog-feed

./: .env.example  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml
docs/: data.json  index.html
src/: __init__.py  app.py  atom_feed.py  build.py  classifier.py  feeds.py  main.py  models.py  parity.py  post_engine.py  retention.py  rule_engine.py  scorer.py  state.py  summarizer.py  teams.py
src/ingestors/: __init__.py  base.py  github_changelog.py  visual_studio.py  vscode.py
src/static/: index.html
tests/: test_atom_feed.py  test_build.py  test_classifier.py  test_ingestors.py  test_models.py  test_parity.py  test_post_engine.py  test_retention.py  test_rule_engine.py  test_scorer.py  test_state.py  test_summarizer.py  test_teams.py
